syntax = "proto3";

option csharp_namespace = "Backend";

message Position {
  string vehicle_id = 1;
  string org_id = 2;
  uint64 timestamp = 3;
  double longitude = 4;
  double latitude = 5;
  int32 heading = 6;
  bool doors_open = 7;
}

message Viewport {
  double lat1 = 1;
  double lng1 = 2;
  double lat2 = 3;
  double lng2 = 4;
}

message CommandEnvelope {
  oneof command {
    CreateViewport create_viewport = 1;
    UpdateViewport update_viewport = 2;
  }
}

message CreateViewport{
  string connection_id = 1;
}

message UpdateViewport {
  Viewport viewport = 1;
}

message PositionBatch{
  repeated Position positions = 1;
}

message GetPositionsHistoryRequest {
}
